--- a/iteration-04/style.css
+++ b/iteration-04/style.css
@@ -1,1 +1,85 @@
 /* This is where your styles go! Don't forget to import the correct font (Roboto) from Google Fonts. */
+@font-face {
+    font-family: Roboto;
+    src: url('assets/Roboto/Roboto-Light.ttf');
+}
+
+body {
+    margin: 0;
+    background: #28344c;
+}
+
+
+.container-header {
+    text-align:center;
+    width: 100vw;
+    height: 15vh;
+    background: #121A24;
+    justify-content: center;
+}
+
+
+.header__logo {
+    height: 55%;
+    align-self: center;
+    margin-top: 3vh;
+
+}
+
+@media screen and (max-width: 1099px) {
+    .header__item {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .container-header {
+        display: grid;
+        justify-content: normal;
+        grid-template-columns: 15% 38% auto auto auto auto 15%;
+        grid-template-rows: 100%;
+    }
+
+    .header__item {
+        font-family: Roboto, sans-serif;
+        font-style: normal;
+        font-weight: 300;
+        color: white;
+    }
+
+    .header__logo {
+        height: 55%;
+        align-self: center;
+        grid-column: 2;
+    }
+
+    #store {
+        align-self: center;
+        grid-column: 3;
+    }
+
+    #community {
+        align-self: center;
+        grid-column: 4;
+    }
+
+    #about {
+        align-self: center;
+        grid-column: 5;
+    }
+    #support {
+        align-self: center;
+        grid-column: 6;
+    }
+
+    #root {
+        display: grid;
+        width: 100vw;
+        height: 85vh;
+        grid-template-rows: 3vh 8vh 3vh 3vh auto 3vh auto 3vh auto;
+        grid-template-columns: 15vw 70vw 15vw;
+    }
+
+}
+
+
