--- a/iteration-04/main.css
+++ b/iteration-04/main.css
@@ -9,7 +9,7 @@
     grid-template-columns: 100vw;
 }
 
-#main__gta-logo {
+#main__gta-logo-mob {
     width: 100vw;
     grid-row: 1;
 }
@@ -20,7 +20,7 @@
 }
 
 #main__title {
-    grid-row: 1;
+    grid-row: 2;
 
     margin-left: 3%;
     font-family: 'Roboto', sans-serif;
@@ -103,11 +103,135 @@
     .small-images {
         display: none;
     }
+    #main__gta-car-desk {
+        display: none;
+    }
+
+    #main__gta-logo-desk {
+        display: none;
+    }
+
+    #main__gta-logo {
+        display: none;
+    }
+
+    #community-hub-button {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 1100px) {
+
+    .small-images {
+        display: none;
+    }
+    #main__gta-car {
+        display: none;
+    }
+    #main__gta-logo {
+        display: none;
+    }
+    #main__gta-logo-mob {
+        display: none;
+    }
     .main {
+        grid-column: 2;
+        grid-row: 4;
         display: grid;
+        grid-template-rows: 5% 15% auto 20%;
+        grid-template-columns: 60% 40%;
+        grid-column-gap: 2%;
+    }
+
+    #path {
+        grid-row: 1;
+        font-family: 'Roboto', sans-serif;
+        font-style: normal;
+        color: #AFAFAF;
+
+    }
+
+    #main__title {
+        grid-row: 2;
+        margin-left: 0;
+
+    }
+
+    #community-hub-button {
+        grid-column: 2;
+        grid-row: 2;
+        display: grid;
+        grid-template-rows: 20% 60% 20%;
+        grid-template-columns: 40% 60%;
+    }
+
+    #community-hub-frame {
+        grid-row: 2;
+        grid-column: 2;
+        background: rgba(103, 193, 245, 0.2);
+        border-radius: 4px;
+        text-align: center;
+    }
+
+    #community-hub-text {
+        font-family: 'Roboto', sans-serif;
+        font-style: normal;
+        align-self: center;
+        font-weight: 500;
+        color: #67C1F5;
+        margin-top: 6%;
+    }
+
+    .photos {
+        grid-row: 3;
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: auto;
+        grid-row-gap: 2%;
+    }
+
+    #main__gta-car-desk {
+        grid-row: 1;
+        object-fit: cover;
+        width: 100%;
+    }
+    .small-images {
+        grid-row: 2;
+        display: grid;
+        grid-template-columns: auto auto auto auto auto;
+        grid-template-rows: 100%;
+        grid-gap: 2%;
+    }
+    .small-images > * {
+        object-fit: cover;
+        width: 100%;
+    }
+
+    .main__data {
+        grid-column: 2;
+        grid-row: 3;
+        display: grid;
+        grid-template-rows: auto auto 15% 15%;
+        grid-template-columns: 100%;
+    }
+
+    #main__gta-logo-desk {
+        object-fit: cover;
+        width: 100%;
+    }
+
+    #description {
+        grid-row: 2;
+        font-size: small;
+        margin-left: 0;
+    }
+
+    .main__metadata {
+        grid-row: 3;
+        font-size: smaller;
+    }
+    .main__metadata__item-left {
+        margin-left: 0;
     }
 }
 
