--- a/iteration-04/menu.css
+++ b/iteration-04/menu.css
@@ -52,23 +52,26 @@
     background: #5F849B;
     box-shadow: inset 0px 2px 5px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    display: grid;
+    grid-template-columns: 2% 8% auto 8%;
 }
-.searchbox__item {
+#searchbox__item {
     font-family: Roboto, sans-serif;
     font-style: italic;
     font-weight: 500;
     color: #505050;
     font-size: 120%;
-    position: absolute;
-    left: 5%;
-    top: 25%;
+    align-self: center;
+    grid-row: 2;
+    grid-column: 2;
 }
 
 .fa-search {
-    position: absolute;
+    align-self: center;
     right: 3%;
-    top: 30%;
     color: #505050;
+    grid-row: 2;
+    grid-column: 4;
 }
 
 @media screen and (min-width: 1100px) {
@@ -78,7 +81,7 @@
         display: grid;
         height: 100%;
         width: 100%;
-        grid-template-columns: auto auto auto auto auto auto auto 30%;
+        grid-template-columns: auto auto auto auto auto auto auto 10% 30% 2%;
         grid-template-rows: 20% 60% 20%;
         background: linear-gradient(90deg, #4371A5 0%, #142981 100%);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -87,38 +90,39 @@
     .menu__item {
         align-self: center;
     }
-    .menu__item:nth-child(1) {
+    #yourstore {
         grid-row: 2;
         grid-column: 2;
     }
 
-    .menu__item:nth-child(2) {
+    #newandnoteworthy {
         grid-row: 2;
         grid-column: 3;
     }
 
-    .menu__item:nth-child(3) {
+    #categories {
         grid-row: 2;
         grid-column: 4;
     }
 
-    .menu__item:nth-child(4) {
+    #pshop {
         grid-row: 2;
         grid-column: 5;
     }
 
-    .menu__item:nth-child(5) {
+    #news {
         grid-row: 2;
         grid-column: 6;
     }
 
-    .menu__item:nth-child(6) {
+    #labs {
         grid-row: 2;
         grid-column: 7;
     }
     #searchbox {
         grid-row: 2;
-        grid-column: 8;
+        grid-column: 9;
+
 
     }
 }
