--- a/iteration-04/style.css
+++ b/iteration-04/style.css
@@ -26,7 +26,7 @@ body {
 
 }
 
-@media screen and (max-width: 1099px) {
+@media screen and (max-width: 1100px) {
     .header__item {
         display: none;
     }
@@ -51,6 +51,7 @@ body {
         height: 55%;
         align-self: center;
         grid-column: 2;
+        margin-top: 0;
     }
 
     #store {
@@ -76,7 +77,7 @@ body {
         display: grid;
         width: 100vw;
         height: 85vh;
-        grid-template-rows: 3vh 8vh 3vh 3vh auto 3vh auto 3vh auto;
+        grid-template-rows: 3vh 8vh 3vh auto ;
         grid-template-columns: 15vw 70vw 15vw;
     }
 
