--- a/iteration-04/tags.css
+++ b/iteration-04/tags.css
@@ -5,9 +5,9 @@
 
 .main__tags {
     display: grid;
-    grid-template-columns: 2vw auto auto auto auto auto;
+    grid-template-columns: 1vw auto auto auto auto auto;
     grid-template-rows: 50% 50%;
-    grid-column-gap: 2%;
+    grid-column-gap: 4%;
 }
 
 .main__tags__item {
@@ -20,13 +20,14 @@
     grid-row: 2;
     align-self: center;
     justify-content: center;
+    text-align: center;
 }
 
 #main__tags__header {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 500;
-    margin-top: 30%;
+    align-self: center;
     color: #556772;
     grid-column: 2;
     grid-row: 1;
@@ -46,4 +47,31 @@
 
 #plus {
     grid-column: 5;
+}
+@media screen and (min-width: 1100px) {
+    .main__tags {
+        grid-row: 4;
+        grid-template-columns: auto auto auto auto auto;
+        font-size: smaller;
+    }
+
+    #main__tags__header {
+        grid-column: 1;
+    }
+
+    #openworld {
+        grid-column: 1;
+    }
+
+    #action {
+        grid-column: 2;
+    }
+
+    #multiplayer {
+        grid-column: 3;
+    }
+
+    #plus {
+        grid-column: 4;
+    }
 }
