--- a/iteration-04/menu.css
+++ b/iteration-04/menu.css
@@ -48,12 +48,14 @@
 
 #searchbox {
     grid-row: 8;
+    grid-column: 2;
     position: relative;
     background: #5F849B;
     box-shadow: inset 0px 2px 5px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     display: grid;
-    grid-template-columns: 2% 8% auto 8%;
+    grid-template-columns: 2% 8% auto 4%;
+    grid-template-rows: 20% 60% 20%;
 }
 #searchbox__item {
     font-family: Roboto, sans-serif;
@@ -122,7 +124,7 @@
     #searchbox {
         grid-row: 2;
         grid-column: 9;
-
-
+        grid-template-columns: 2% 8% auto 8%;
+        grid-template-rows: 20% 60% 20%;
     }
 }
