--- a/iteration-04/style.css
+++ b/iteration-04/style.css
@@ -38,7 +38,7 @@ body {
     .container-header {
         display: grid;
         justify-content: normal;
-        grid-template-columns: auto 400px 100px 100px 100px 100px auto;
+        grid-template-columns: 20% 25% auto auto auto auto 20%;
         grid-template-rows: 100%;
     }
 
@@ -80,7 +80,7 @@ body {
         width: 100vw;
         height: 85vh;
         grid-template-rows: 3vh 8vh 3vh auto 5vh auto;
-        grid-template-columns: auto 800px auto;
+        grid-template-columns: 20vw 60vw 20vw;
     }
 
     #sign-in-frame {
