fix: mistakes in example html

--- a/iteration-08/src/components/Bar/Playbar.html
+++ b/iteration-08/src/components/Bar/Playbar.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div class="bar">
-    <button class="play" type="button">
+    <button class="bar__play" type="button">
         <img alt="Play" class="image">
     </button>
-    <button class="follow" type="button">
+    <button class="bar__follow" type="button">
         Follow
     </button>
 </div>
