--- a/iteration-08/src/components/SmallCard/SmallCard.html
+++ b/iteration-08/src/components/SmallCard/SmallCard.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 <div class="small-card">
-    <img alt="Card" class="image" >
-    <div class="title">Title</div>
+    <div class="image-container">
+        <img class="image image--bordered" alt="Card" />
+    </div>
+    <div class="title">
+        Title
+    </div>
 </div>
+
 </body>
 </html>
