--- a/iteration-08/src/components/Artist/Artist.html
+++ b/iteration-08/src/components/Artist/Artist.html
@@ -9,10 +9,10 @@
 <body>
 <div class="wrapper">
     <div class="buttons">
-        <button class="button" type="button">
+        <button class="navigation-button" type="button">
             <img alt="Go back" class="image">
         </button>
-        <button class="button" type="button">
+        <button class="navigation-button" type="button">
             <img alt="Go next" class="image">
         </button>
     </div>
