fix: image-container css

--- a/iteration-08/src/components/Artist/Artist.html
+++ b/iteration-08/src/components/Artist/Artist.html
@@ -24,7 +24,7 @@
             <span class="author__listeners">XXX monthly listeners</span>
             <span class="author__name">Name</span>
             <div class="author__verified">
-                <div class="image-container">
+                <div class="image-container image-container--artist">
                     <img alt="Verified artist" class="image">
                 </div>
                 Verified Artist
