--- a/iteration-08/src/components/SmallCard/SmallCard.html
+++ b/iteration-08/src/components/SmallCard/SmallCard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="small-card">
-    <div class="image-container">
+    <div class="image-container image-container--wide">
         <img class="image image--bordered" alt="Card" />
     </div>
     <div class="title">
