Iteration 07 fixes from review

--- a/iteration-07/src/views/accommodation.pug
+++ b/iteration-07/src/views/accommodation.pug
@@ -12,7 +12,7 @@ head
 #root
     .ui.main.container.text.app
         .ui.secondary.menu
-            a.item(href='index.html') Home
+            a.item(href='/accommodations') Home
         .accomodation-page.ui.one.column.grid
             .column.wide
                 .ui.fluid.card
